--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,57 +15,39 @@ header {
     background-color: aliceblue;
     border-radius: 50px;
     text-align: center;
-    float: left;
-    margin-top: 0.2cm;
-    margin-right: 0.2cm;
-    margin-left: 0.2cm;
-    margin-bottom: 0.2cm;
-    height: 700px;
-    width: 30%;
+    margin-top: 25px;
+    padding-left: 5px;
+    padding-top: 5px;
   }
   .two{
     background-color: bisque;
     border-radius: 50px;
     text-align: center;
-    float: left;
-    margin-top: 0.2cm;
-    margin-right: 0.2cm;
-    margin-left: 0.2cm;
-    margin-bottom: 0.2cm;
-    height: 700px;
-    width: 33%;
+    margin-top: 25px;
+    padding-left: 5px;
+    padding-top: 5px;
   }
   .three{
     background-color: blanchedalmond;
     border-radius: 50px;
     text-align: center;
-    float: right;
-    margin-top: 0.2cm;
-    margin-right: 0.2cm;
-    margin-left: 0.2cm;
-    margin-bottom: 0.2cm;
-    height: 700px;
-    width: 33%;
+    margin-top: 25px;
+    padding-left: 5px;
+    padding-top: 5px;
   }
   .four{
     background-color: aqua;
     border-radius: 50px;
     text-align: center;
-    float: right;
-    margin-top: 0.2cm;
-    margin-bottom: 0.2cm;
-    height: 500px;
-    width: 100%;
+    margin-top: 25px;
+    padding-left: 5px;
+    padding-top: 5px;
+
   }
   .five{
     background-color: azure;
     border-radius: 50px;
     text-align: center;
-    float: left;
-    margin-top: 0.2cm;
-    margin-bottom: 0.2cm;
-    height: 300px;
-    width: 100%;
   }
  /* Clear floats after the columns */
 section::after {
