--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,7 +56,7 @@ section::after {
   clear: both;
 }
 p{
-  font-size: 500%;
+  font-size: 200%;
   font-family: 'Times New Roman', Times, serif;
 }
 
@@ -65,6 +65,7 @@ footer {
   background-color: #666;
   padding: 10px;
   text-align: center;
+   margin-top: 1cm;
   color: white;
 }
    
